# kaiw-gear-academy

./: .gitignore
.github/workflows/: ci.yml
pebbles-game/io/src/: lib.rs
pebbles-game/src/: lib.rs
pebbles-game/tests/: basic.rs
wordle-game/: Cargo.toml
wordle-game/game-session/: Cargo.toml  build.rs
wordle-game/game-session-io/: Cargo.toml
wordle-game/game-session-io/src/: lib.rs
wordle-game/game-session/src/: lib.rs
wordle-game/game-session/tests/: tests.rs
wordle-game/wordle/: Cargo.toml
wordle-game/wordle-game-session-io/src/: lib.rs
wordle-game/wordle-game-session/tests/: tests.rs
wordle-game/wordle-io/: Cargo.toml
wordle-game/wordle/src/: lib.rs
wordle-program/: Cargo.toml
wordle-program/game-session/io/src/: lib.rs
wordle-program/game-session/src/: lib.rs
wordle-program/game-session/tests/: basic
wordle-program/tests/: basic.rs
