[package]
name = "wordle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
gstd.workspace = true
gmeta.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
wordle-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
wordle-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
